updated z-index of hamburger menu options on mobile navbar to prevent overlap

--- a/style.css
+++ b/style.css
@@ -182,6 +182,7 @@ ul#mnav {
     }
     
     ul#mnav #mnav-bottom {
+        z-index: 5;
         display: none;
         text-align: right;
         position: absolute;
